draft "trips presented" changes
In order to properly generate the quality text, we need to know how many trips a particular survey was presented for

To accomplish this, we can use the strings in the config that determine what survey to show the user (or a python version thereof)

We need to use the composite trips to have the sections, and perform some other data manipulations in order to have this work properly

Next is finding all of the responses that are actually present for each survey ... and associating that with each question ...

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -26,40 +26,60 @@
    "source": [
     "#probably going to end up passing this in\n",
     "survey_info =  {\n",
-    "      \"surveys\": {\n",
-    "        \"UserProfileSurvey\": {\n",
-    "          \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/washingtoncommons/washingtoncommons-onboarding-survey-v4.xml\",\n",
-    "          \"version\": 1.3,\n",
-    "          \"compatibleWith\": 1,\n",
-    "          \"dataKey\": \"manual/demographic_survey\",\n",
-    "          \"labelTemplate\": {\n",
-    "            \"en\": \"Answered\",\n",
-    "            \"es\": \"Contestada\"\n",
-    "          }\n",
-    "        },\n",
-    "        \"TripConfirmSurvey\": {\n",
-    "            \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/washingtoncommons/washingtoncommons-trip-survey-v2.json\",\n",
-    "            \"version\": 1.2,\n",
-    "            \"compatibleWith\": 1,\n",
-    "            \"dataKey\": \"manual/trip_user_input\",\n",
-    "            \"labelVars\": {\n",
-    "              \"modes\": {\n",
-    "                \"key\": \"What_was_the_main_pu_f_this_trip_trip_leg\",\n",
-    "                \"type\": \"length\"\n",
-    "              },\n",
-    "              \"purposes\": {\n",
-    "                \"key\": \"_2_What_was_the_mode_of_transp\",\n",
-    "                \"type\": \"length\"\n",
-    "              }\n",
-    "            },\n",
-    "            \"labelTemplate\": {\n",
-    "              \"en\": \"{ purposes, plural, =0 {No purposes} one {1 purpose} other {# purposes} }, { modes, plural, =0 {No modes} one {1 mode} other {# modes} }\",\n",
-    "              \"es\": \"{ purposes, plural, =0 {No propósitos} one {1 propósito} other {# propósitos} }, { modes, plural, =0 {No modos} one {1 modo} other {# modos} }\"\n",
-    "            }\n",
-    "          }\n",
+    "    \"surveys\": {\n",
+    "      \"UserProfileSurvey\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-onboarding-v0.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/demographic_survey\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
     "      },\n",
-    "      \"trip-labels\": \"ENKETO\"\n",
-    "    }"
+    "      \"DfcEvReturnTrip\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-return-trip-v0.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/trip_user_input\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      },\n",
+    "      \"DfcEvRoamingTrip\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-roaming-trip-v0.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/trip_user_input\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      },\n",
+    "      \"DfcGasTrip\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-gas-trip-v0.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/trip_user_input\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      }\n",
+    "    },\n",
+    "    \"buttons\": {\n",
+    "      \"trip-label\": [\n",
+    "        {\n",
+    "          \"surveyName\": \"DfcGasTrip\",\n",
+    "          \"not-filled-in-label\": { \"en\": \"Gas Car Survey\" },\n",
+    "          \"showsIf\": \"sections[0].sensed_mode_str == 'CAR'\",\n",
+    "          \"showedIf\": \"sections[0]['sensed_mode_str'] == 'CAR'\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"surveyName\": \"DfcEvRoamingTrip\",\n",
+    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
+    "          \"showsIf\": \"sections[0].sensed_mode_str != 'CAR' && !pointIsWithinBounds(end_loc.coordinates, [[-105.153, 39.745], [-105.150, 39.743]])\",\n",
+    "          \"showedIf\": \"sections[0]['sensed_mode_str'] != 'CAR' and not pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"surveyName\": \"DfcEvReturnTrip\",\n",
+    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
+    "          \"showsIf\": \"sections[0].sensed_mode_str != 'CAR' && pointIsWithinBounds(end_loc.coordinates, [[-105.153, 39.745], [-105.150, 39.743]])\",\n",
+    "          \"showedIf\": \"sections[0]['sensed_mode_str'] != 'CAR' and pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
+    "        }\n",
+    "      ]\n",
+    "    },\n",
+    "    \"trip-labels\": \"ENKETO\"\n",
+    "  }"
    ]
   },
   {
@@ -124,7 +144,7 @@
     "            if(bool(label.parentNode.getAttribute(\"ref\"))):\n",
     "                #label appearance = not a question?\n",
     "                #nodeName input -- to word cloud as a later addition?\n",
-    "                if label.parentNode.getAttribute(\"appearance\") != \"label\" && label.parentNode.nodeName != \"input\": \n",
+    "                if label.parentNode.getAttribute(\"appearance\") != \"label\" and label.parentNode.nodeName != \"input\": \n",
     "                    quest_dict[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
     "            \n",
     "            if label.parentNode.nodeName == 'item':\n",
@@ -201,13 +221,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "854b3070",
+   "id": "79608979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#same as phone code\n",
+    "def pointIsWithinBounds(pt, bounds): \n",
+    "    #pt's lon must be east of, or greater than, NW's lon; and west of, or less than, SE's lon\n",
+    "    lonInRange = pt[0] > bounds[0][0] and pt[0] < bounds[1][0];\n",
+    "    #pt's lat must be south of, or less than, NW's lat; and north of, or greater than, SE's lat\n",
+    "    latInRange = pt[1] < bounds[0][1] and pt[1] > bounds[1][1];\n",
+    "    \n",
+    "    return latInRange and lonInRange;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd182b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "#load all of the confirmed trips\n",
     "tq = scaffolding.get_time_query(year, month)\n",
     "all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
+    "\n",
     "#remove blank inputs\n",
     "survey_trips = all_confirmed_trips[all_confirmed_trips['user_input'] != {}]\n",
     "\n",
@@ -217,7 +255,6 @@
     "\n",
     "#gather the cols needed for charts and text\n",
     "survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
-    "survey_trips.head()\n",
     "\n",
     "#get quality text\n",
     "qual_text = get_text(survey_trips)\n",
@@ -237,6 +274,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c739be2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#how we filter the rows\n",
+    "def filter_fn(row):\n",
+    "    globals = {'pointIsWithinBounds': pointIsWithinBounds}\n",
+    "    locals = {'end_loc': row['end_loc'], 'start_loc': row['start_loc'], 'sections': row['sections']}\n",
+    "\n",
+    "    return eval(eval_string, globals, locals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8b887f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create the total dfs\n",
+    "tq = scaffolding.get_time_query(year, month)\n",
+    "all_composite_trips = scaffolding.load_all_composite_trips(tq)\n",
+    "\n",
+    "# transform data to meet a data format requirement\n",
+    "all_composite_trips['sections'] = all_composite_trips['sections'].apply(lambda x: [x[0]['data']] if len(x) > 0 else x)\n",
+    "\n",
+    "#only want trips with sections\n",
+    "all_composite_trips = all_composite_trips[all_composite_trips['sections'].str.len() > 0]\n",
+    "\n",
+    "#gather the eval strings\n",
+    "eval_strings = {}\n",
+    "for item in survey_info['buttons']['trip-label']:\n",
+    "    eval_strings[item['surveyName']] = item['showedIf']\n",
+    "\n",
+    "#use eval strings to build \"total\" dataframes\n",
+    "total_dfs = {}\n",
+    "for name, eval_string in eval_strings.items():\n",
+    "    meets_bools = all_composite_trips.apply(filter_fn, axis=1)\n",
+    "    df = all_composite_trips[meets_bools]\n",
+    "    \n",
+    "    total_dfs[name] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b7001a9",
    "metadata": {},
    "outputs": [],
@@ -248,7 +331,6 @@
     "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
-    "\n",
     "file_suffix = scaffolding.get_file_suffix(year, month, program)"
    ]
   },
