increase accuracy of quality text
Each survey will have a different "denominator" of quality text which should be presented to the user to represent what percentage of total eligible trips have survey responses

using "showsIfPy" as a backup for strings that are too complicated, changing access notation for dictionaries in https://github.com/e-mission/nrel-openpath-deploy-configs/pull/88, and replacing && and ! allows us to evaluate the strings in python

needed to track the survey names in order to know which denominator to use, so turned the list of urls into a dictionary instead of a list, and turned the dictionary of questions into a dictionary of dictionaries, one for each question

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7fbf97",
+   "id": "ce0dcc9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,8 @@
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "dynamic_labels = {  }\n",
-    "use_imperial = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce0dcc9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "use_imperial = False\n",
+    "\n",
     "#probably going to end up passing this in\n",
     "survey_info =  {\n",
     "    \"surveys\": {\n",
@@ -61,20 +53,17 @@
     "        {\n",
     "          \"surveyName\": \"DfcGasTrip\",\n",
     "          \"not-filled-in-label\": { \"en\": \"Gas Car Survey\" },\n",
-    "          \"showsIf\": \"sections[0].sensed_mode_str == 'CAR'\",\n",
-    "          \"showedIf\": \"sections[0]['sensed_mode_str'] == 'CAR'\"\n",
+    "          \"showsIf\": \"sections[0]['sensed_mode_str'] == 'CAR'\"\n",
     "        },\n",
     "        {\n",
     "          \"surveyName\": \"DfcEvRoamingTrip\",\n",
     "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
-    "          \"showsIf\": \"sections[0].sensed_mode_str != 'CAR' && !pointIsWithinBounds(end_loc.coordinates, [[-105.153, 39.745], [-105.150, 39.743]])\",\n",
-    "          \"showedIf\": \"sections[0]['sensed_mode_str'] != 'CAR' and not pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
+    "          \"showsIf\": \"sections[0]['sensed_mode_str'] != 'CAR' && !pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
     "        },\n",
     "        {\n",
     "          \"surveyName\": \"DfcEvReturnTrip\",\n",
     "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
-    "          \"showsIf\": \"sections[0].sensed_mode_str != 'CAR' && pointIsWithinBounds(end_loc.coordinates, [[-105.153, 39.745], [-105.150, 39.743]])\",\n",
-    "          \"showedIf\": \"sections[0]['sensed_mode_str'] != 'CAR' and pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
+    "          \"showsIf\": \"sections[0]['sensed_mode_str'] != 'CAR' && pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
     "        }\n",
     "      ]\n",
     "    },\n",
@@ -97,6 +86,7 @@
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
+    "import re\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
@@ -109,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b18bc854",
+   "id": "c739be2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +107,7 @@
     "#output: list of links to the sheets where questions/answers are\n",
     "#will run n surveys times\n",
     "def get_sheet_links(survey_list):\n",
-    "    sheet_list = []\n",
+    "    sheet_list = {}\n",
     "    for name in survey_list:\n",
     "        form_path = survey_info['surveys'][name]['formPath']\n",
     "        #THIS ASSUMES THE FILENAME IS THE SAME AS THE FORM PATH BUT WITH xml FILE TYPE\n",
@@ -125,19 +115,24 @@
     "        l_path[-1] = 'xml'\n",
     "        s = '.'\n",
     "        sheet_path = s.join(l_path)\n",
-    "        sheet_list.append(sheet_path)\n",
+    "        sheet_list[name] = sheet_path\n",
+    "\n",
     "    return sheet_list\n",
     "\n",
     "#input: list of urls for the survey xlsx files\n",
-    "#output: two dictionaries to translate the ?s/ans\n",
+    "#output: two dictionaries to translate the ?s/ans (?s dict is nested per survey)\n",
     "#will run n surveys times\n",
-    "def build_dictionaries(url_list):\n",
+    "def build_dictionaries(sheet_list):\n",
     "    opt_dict = {}\n",
     "    quest_dict = {}\n",
     "    \n",
-    "    for url in sheet_list:\n",
+    "    for survey_name in sheet_list:\n",
+    "        url = sheet_list[survey_name]\n",
     "        result = urllib.request.urlopen(url)\n",
     "        doc = minidom.parse(result) \n",
+    "        \n",
+    "        #nested dictionaries to keep surveys grouped\n",
+    "        survey_questions = {}\n",
     "\n",
     "        labels = doc.getElementsByTagName(\"label\") \n",
     "        for label in labels:\n",
@@ -145,7 +140,7 @@
     "                #label appearance = not a question?\n",
     "                #nodeName input -- to word cloud as a later addition?\n",
     "                if label.parentNode.getAttribute(\"appearance\") != \"label\" and label.parentNode.nodeName != \"input\": \n",
-    "                    quest_dict[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
+    "                    survey_questions[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
     "            \n",
     "            if label.parentNode.nodeName == 'item':\n",
     "                if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
@@ -154,7 +149,9 @@
     "                    opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data  \n",
     "                elif label.parentNode.getElementsByTagName(\"name\"):\n",
     "                    opt_dict[label.parentNode.getElementsByTagName(\"name\")[0].firstChild.data] = label.firstChild.data  \n",
-    "                    \n",
+    "        \n",
+    "        quest_dict[survey_name] = survey_questions\n",
+    "        \n",
     "    return opt_dict, quest_dict\n",
     "\n",
     "\n",
@@ -167,6 +164,7 @@
     "    for i in range(len(df)):\n",
     "        data_key = list(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'].keys())[0]\n",
     "        row = pd.json_normalize(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'][data_key])\n",
+    "        row['user_id'] = df.loc[i].user_id\n",
     "        rows.append(row)\n",
     "    df = pd.concat(rows)\n",
     "    \n",
@@ -192,21 +190,34 @@
     "    \n",
     "    return labels\n",
     "\n",
-    "#input: all of the responses to a single survey\n",
-    "#output: text with num responses and users\n",
-    "#THIS SHOULD GO IN SCAFFOLDING AND INCLUDE WHOLE POOL AT SOME POINT\n",
-    "def get_text(responses):\n",
-    "    num_resp = len(responses)\n",
-    "    num_users = responses.user_id.nunique()\n",
-    "    quality_text = f\"Based on {num_resp} responses from {num_users} users\"\n",
-    "    print(quality_text)\n",
-    "    return quality_text"
+    "#input: pt - set of coordinates in 1d array, bounds - 2 points in 2-d array\n",
+    "#output: boolean if point is within the bounding box\n",
+    "#this function is a pythonized version of the one in the phone code - good candidate for common lib\n",
+    "def pointIsWithinBounds(pt, bounds): \n",
+    "    #pt's lon must be east of, or greater than, NW's lon; and west of, or less than, SE's lon\n",
+    "    lonInRange = pt[0] > bounds[0][0] and pt[0] < bounds[1][0];\n",
+    "    #pt's lat must be south of, or less than, NW's lat; and north of, or greater than, SE's lat\n",
+    "    latInRange = pt[1] < bounds[0][1] and pt[1] > bounds[1][1];\n",
+    "    \n",
+    "    return latInRange and lonInRange;\n",
+    "\n",
+    "#input: single row of dataframe\n",
+    "#output: T/F evaluation of the conditon\n",
+    "#eval_string is re-defined for each survey\n",
+    "#TODO:\n",
+    "    #parameterize the eval_string\n",
+    "    #flatten row into dict instead of pulling attr\n",
+    "def filter_fn(row):\n",
+    "    globals = {'pointIsWithinBounds': pointIsWithinBounds}\n",
+    "    locals = {'end_loc': row['end_loc'], 'start_loc': row['start_loc'], 'sections': row['sections']}\n",
+    "\n",
+    "    return eval(eval_string, globals, locals)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b355efd",
+   "id": "5319980e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,33 +232,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79608979",
+   "id": "3b355efd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#same as phone code\n",
-    "def pointIsWithinBounds(pt, bounds): \n",
-    "    #pt's lon must be east of, or greater than, NW's lon; and west of, or less than, SE's lon\n",
-    "    lonInRange = pt[0] > bounds[0][0] and pt[0] < bounds[1][0];\n",
-    "    #pt's lat must be south of, or less than, NW's lat; and north of, or greater than, SE's lat\n",
-    "    latInRange = pt[1] < bounds[0][1] and pt[1] > bounds[1][1];\n",
-    "    \n",
-    "    return latInRange and lonInRange;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cd182b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#load all of the confirmed trips\n",
+    "#load all of the composite trips - require sections\n",
     "tq = scaffolding.get_time_query(year, month)\n",
-    "all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
+    "all_composite_trips = scaffolding.load_all_composite_trips(tq)\n",
     "\n",
     "#remove blank inputs\n",
-    "survey_trips = all_confirmed_trips[all_confirmed_trips['user_input'] != {}]\n",
+    "survey_trips = all_composite_trips[all_composite_trips['user_input'] != {}]\n",
     "\n",
     "#survey counts df\n",
     "survey_trips = survey_trips.reset_index()\n",
@@ -256,34 +250,16 @@
     "#gather the cols needed for charts and text\n",
     "survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
     "\n",
-    "#get quality text\n",
-    "qual_text = get_text(survey_trips)\n",
-    "\n",
     "#debug_df\n",
     "debug_df = pd.DataFrame.from_dict({\n",
     "        \"year\": year,\n",
     "        \"month\": month,\n",
     "        \"Registered_participants\": len(scaffolding.get_participant_uuids(program, include_test_users)),\n",
-    "        \"Participants_with_at_least_one_trip\": scaffolding.unique_users(all_confirmed_trips),\n",
+    "        \"Participants_with_at_least_one_trip\": scaffolding.unique_users(all_composite_trips),\n",
     "        \"Participant_with_at_least_one_labeled_trip\": scaffolding.unique_users(survey_trips),\n",
     "        \"Trips_with_at_least_one_label\": len(survey_trips)\n",
     "        },\n",
     "    orient='index', columns=[\"value\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c739be2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#how we filter the rows\n",
-    "def filter_fn(row):\n",
-    "    globals = {'pointIsWithinBounds': pointIsWithinBounds}\n",
-    "    locals = {'end_loc': row['end_loc'], 'start_loc': row['start_loc'], 'sections': row['sections']}\n",
-    "\n",
-    "    return eval(eval_string, globals, locals)"
    ]
   },
   {
@@ -294,9 +270,6 @@
    "outputs": [],
    "source": [
     "#create the total dfs\n",
-    "tq = scaffolding.get_time_query(year, month)\n",
-    "all_composite_trips = scaffolding.load_all_composite_trips(tq)\n",
-    "\n",
     "# transform data to meet a data format requirement\n",
     "all_composite_trips['sections'] = all_composite_trips['sections'].apply(lambda x: [x[0]['data']] if len(x) > 0 else x)\n",
     "\n",
@@ -306,7 +279,14 @@
     "#gather the eval strings\n",
     "eval_strings = {}\n",
     "for item in survey_info['buttons']['trip-label']:\n",
-    "    eval_strings[item['surveyName']] = item['showedIf']\n",
+    "    if 'showsIfPy' in item.keys():\n",
+    "        eval_strings[item['surveyName']] = item['showsIfPy']\n",
+    "    else:\n",
+    "        raw_string = item['showsIf']\n",
+    "        expression = raw_string.replace('&&', 'and')\n",
+    "        expression = expression.replace('||', 'or')\n",
+    "        expression = re.sub(r\"!(?!=)\", \"not \", expression)\n",
+    "        eval_strings[item['surveyName']] = expression\n",
     "\n",
     "#use eval strings to build \"total\" dataframes\n",
     "total_dfs = {}\n",
@@ -344,25 +324,41 @@
    "outputs": [],
    "source": [
     "#create one plot per question in the survey\n",
-    "for col in quest_dict.keys():\n",
-    "    filename = col + file_suffix\n",
-    "    plot_title_no_quality = quest_dict[col]\n",
+    "for survey_name in quest_dict.keys():\n",
+    "    print(\"Charts for:\", survey_name)\n",
     "\n",
-    "    try:\n",
-    "        plot_title = plot_title_no_quality+'\\n'+qual_text\n",
-    "        quest_frame = df_responses.copy()\n",
-    "        quest_frame = quest_frame[quest_frame[col] != \"\"] #could have blank responses for non-mandatory ?s\n",
-    "        labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
-    "        labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
-    "        values = quest_frame[col].value_counts(dropna=True).tolist()\n",
+    "    for col in quest_dict[survey_name].keys():\n",
+    "        \n",
+    "        filename = col + file_suffix\n",
+    "        plot_title_no_quality = quest_dict[survey_name][col]\n",
     "\n",
-    "        pie_chart_purpose(plot_title, labels, values, filename)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values, labels), filename, plot_title)\n",
-    "    \n",
-    "    except:\n",
-    "        generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
-    "        alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)"
+    "        try:\n",
+    "            quest_frame = df_responses.copy()\n",
+    "            #could have blank responses for non-mandatory ?s\n",
+    "            quest_frame = quest_frame[quest_frame[col] != \"\"]\n",
+    "            qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
+    "            \n",
+    "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "            \n",
+    "            labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
+    "            labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
+    "            values = quest_frame[col].value_counts(dropna=True).tolist()\n",
+    "\n",
+    "            pie_chart_purpose(plot_title, labels, values, filename)\n",
+    "            alt_text = store_alt_text_pie(pd.DataFrame(values, labels), filename, plot_title)\n",
+    "\n",
+    "        except:\n",
+    "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
+    "            alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe7f86d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
