bypass evals for non-conditional surveys
if there is only one survey, it isn't conditional, so the denominator is all composite trips

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -276,25 +276,31 @@
     "#only want trips with sections\n",
     "all_composite_trips = all_composite_trips[all_composite_trips['sections'].str.len() > 0]\n",
     "\n",
-    "#gather the eval strings\n",
-    "eval_strings = {}\n",
-    "for item in survey_info['buttons']['trip-label']:\n",
-    "    if 'showsIfPy' in item.keys():\n",
-    "        eval_strings[item['surveyName']] = item['showsIfPy']\n",
-    "    else:\n",
-    "        raw_string = item['showsIf']\n",
-    "        expression = raw_string.replace('&&', 'and')\n",
-    "        expression = expression.replace('||', 'or')\n",
-    "        expression = re.sub(r\"!(?!=)\", \"not \", expression)\n",
-    "        eval_strings[item['surveyName']] = expression\n",
-    "\n",
-    "#use eval strings to build \"total\" dataframes\n",
     "total_dfs = {}\n",
-    "for name, eval_string in eval_strings.items():\n",
-    "    meets_bools = all_composite_trips.apply(filter_fn, axis=1)\n",
-    "    df = all_composite_trips[meets_bools]\n",
-    "    \n",
-    "    total_dfs[name] = df"
+    "#for conditional surveys!\n",
+    "if 'buttons' in survey_info.keys():\n",
+    "    #gather the eval strings\n",
+    "    eval_strings = {}\n",
+    "    for item in survey_info['buttons']['trip-label']:\n",
+    "        if 'showsIfPy' in item.keys():\n",
+    "            eval_strings[item['surveyName']] = item['showsIfPy']\n",
+    "        else:\n",
+    "            raw_string = item['showsIf']\n",
+    "            expression = raw_string.replace('&&', 'and')\n",
+    "            expression = expression.replace('||', 'or')\n",
+    "            expression = re.sub(r\"!(?!=)\", \"not \", expression)\n",
+    "            eval_strings[item['surveyName']] = expression\n",
+    "\n",
+    "    #use eval strings to build \"total\" dataframes\n",
+    "    for name, eval_string in eval_strings.items():\n",
+    "        meets_bools = all_composite_trips.apply(filter_fn, axis=1)\n",
+    "        df = all_composite_trips[meets_bools]\n",
+    "\n",
+    "        total_dfs[name] = df\n",
+    "        \n",
+    "else:\n",
+    "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
+    "    total_dfs[survey_name] = all_composite_trips"
    ]
   },
   {
