flatten entire row instead of pulling values
when preparing to evaluate the string, I had pulled individual values as a workaround

using row.to_dict() instead is more generalizable

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -206,12 +206,11 @@
     "#eval_string is re-defined for each survey\n",
     "#TODO:\n",
     "    #parameterize the eval_string\n",
-    "    #flatten row into dict instead of pulling attr\n",
     "def filter_fn(row):\n",
-    "    globals = {'pointIsWithinBounds': pointIsWithinBounds}\n",
-    "    locals = {'end_loc': row['end_loc'], 'start_loc': row['start_loc'], 'sections': row['sections']}\n",
+    "    funcs = {'pointIsWithinBounds': pointIsWithinBounds}\n",
+    "    row_vars = row.to_dict()\n",
     "\n",
-    "    return eval(eval_string, globals, locals)"
+    "    return eval(eval_string, funcs, row_vars)"
    ]
   },
   {
