add eval string as a parameter to filter fncn
editing this filtering process to explicitly pass the eval string rather than rely on the fact the function shares scope with where it is called - for clarity

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -204,9 +204,7 @@
     "#input: single row of dataframe\n",
     "#output: T/F evaluation of the conditon\n",
     "#eval_string is re-defined for each survey\n",
-    "#TODO:\n",
-    "    #parameterize the eval_string\n",
-    "def filter_fn(row):\n",
+    "def filter_fn(row, eval_string):\n",
     "    funcs = {'pointIsWithinBounds': pointIsWithinBounds}\n",
     "    row_vars = row.to_dict()\n",
     "\n",
@@ -292,7 +290,7 @@
     "\n",
     "    #use eval strings to build \"total\" dataframes\n",
     "    for name, eval_string in eval_strings.items():\n",
-    "        meets_bools = all_composite_trips.apply(filter_fn, axis=1)\n",
+    "        meets_bools = all_composite_trips.apply(lambda x: filter_fn(x, eval_string), axis=1)\n",
     "        df = all_composite_trips[meets_bools]\n",
     "\n",
     "        total_dfs[name] = df\n",
