deal with missing data
if there is no data - we catch and create empty dataframes

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -166,13 +166,17 @@
     "        row = pd.json_normalize(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'][data_key])\n",
     "        row['user_id'] = df.loc[i].user_id\n",
     "        rows.append(row)\n",
-    "    df = pd.concat(rows)\n",
-    "    \n",
-    "    rename_nests = {}\n",
-    "    for col in df.columns:\n",
-    "        rename_nests[col] = col.split('.')[-1]\n",
+    "        \n",
+    "    if len(rows) > 0:\n",
+    "        df = pd.concat(rows)\n",
     "\n",
-    "    df = df.rename(columns=rename_nests)\n",
+    "        rename_nests = {}\n",
+    "        for col in df.columns:\n",
+    "            rename_nests[col] = col.split('.')[-1]\n",
+    "\n",
+    "        df = df.rename(columns=rename_nests)\n",
+    "    else:\n",
+    "        df = pd.DataFrame()\n",
     "\n",
     "    return df\n",
     "\n",
@@ -237,15 +241,24 @@
     "tq = scaffolding.get_time_query(year, month)\n",
     "all_composite_trips = scaffolding.load_all_composite_trips(tq)\n",
     "\n",
-    "#remove blank inputs\n",
-    "survey_trips = all_composite_trips[all_composite_trips['user_input'] != {}]\n",
+    "if len(all_composite_trips) > 0:\n",
+    "    #remove blank inputs\n",
+    "    survey_trips = all_composite_trips[all_composite_trips['user_input'] != {}]\n",
     "\n",
-    "#survey counts df\n",
-    "survey_trips = survey_trips.reset_index()\n",
-    "survey_trips['survey_name'] = survey_trips.user_input.apply(lambda sr: sr['trip_user_input']['data']['name'])\n",
+    "    #survey counts df\n",
+    "    survey_trips = survey_trips.reset_index()\n",
+    "    survey_trips['survey_name'] = survey_trips.user_input.apply(lambda sr: sr['trip_user_input']['data']['name'])\n",
     "\n",
-    "#gather the cols needed for charts and text\n",
-    "survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
+    "    #gather the cols needed for charts and text\n",
+    "    survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
+    "    \n",
+    "    # transform data to meet a data format requirement\n",
+    "    all_composite_trips['sections'] = all_composite_trips['sections'].apply(lambda x: [x[0]['data']] if len(x) > 0 else x)\n",
+    "\n",
+    "    #only want trips with sections\n",
+    "    all_composite_trips = all_composite_trips[all_composite_trips['sections'].str.len() > 0]\n",
+    "else:\n",
+    "    survey_trips = pd.DataFrame()\n",
     "\n",
     "#debug_df\n",
     "debug_df = pd.DataFrame.from_dict({\n",
@@ -267,7 +280,6 @@
    "outputs": [],
    "source": [
     "#create the total dfs\n",
-    "# transform data to meet a data format requirement\n",
     "all_composite_trips['sections'] = all_composite_trips['sections'].apply(lambda x: [x[0]['data']] if len(x) > 0 else x)\n",
     "\n",
     "#only want trips with sections\n",
