clean up notebook
removed empty cell and changed "None" inputs to dummy values

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -7,11 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
+    "year = 2024\n",
+    "month = 4\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = None\n",
+    "mode_of_interest = 'e-bike'\n",
     "include_test_users = False\n",
     "dynamic_labels = {  }\n",
     "use_imperial = False\n",
@@ -366,14 +366,6 @@
     "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
     "            alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbe7f86d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
