edits to quality text
polishing the way quality text is handled

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -211,8 +211,14 @@
     "def filter_fn(row, eval_string):\n",
     "    funcs = {'pointIsWithinBounds': pointIsWithinBounds}\n",
     "    row_vars = row.to_dict()\n",
+    "    \n",
+    "    try:\n",
+    "        result = eval(eval_string, funcs, row_vars)\n",
+    "    #if unable to evaluate row, assume not a match (handle old surveys!)\n",
+    "    except:\n",
+    "        result = False\n",
     "\n",
-    "    return eval(eval_string, funcs, row_vars)"
+    "    return result"
    ]
   },
   {
@@ -275,7 +281,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b887f3",
+   "id": "7b7001a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create translation dictionaries\n",
+    "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
+    "print(\"Questions dictionary:\\n\",quest_dict)\n",
+    "print(\"Options dictionary:\\n\", opt_dict)\n",
+    "\n",
+    "#format survey trips into responses dataframe\n",
+    "df_responses = create_dataframe(survey_trips)\n",
+    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93dbaa5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,24 +327,11 @@
     "        \n",
     "else:\n",
     "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
-    "    total_dfs[survey_name] = all_composite_trips"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b7001a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create translation dictionaries\n",
-    "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
-    "print(\"Questions dictionary:\\n\",quest_dict)\n",
-    "print(\"Options dictionary:\\n\", opt_dict)\n",
+    "    total_dfs[survey_name] = all_composite_trips\n",
     "\n",
-    "#format survey trips into responses dataframe\n",
-    "df_responses = create_dataframe(survey_trips)\n",
-    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
+    "# uncomment to check total dataframes\n",
+    "for key in total_dfs.keys():\n",
+    "    print(key, len(total_dfs[key]))"
    ]
   },
   {
@@ -344,10 +354,8 @@
     "\n",
     "        try:\n",
     "            quest_frame = df_responses.copy()\n",
-    "            #could have blank responses for non-mandatory ?s\n",
     "            quest_frame = quest_frame[quest_frame[col] != \"\"]\n",
     "            qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
-    "            \n",
     "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
     "            \n",
     "            labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
