1. Update the load_viz_notebook_data() to return values_dict 2. Update the users according to the include_test_users.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -90,14 +90,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, expanded_ct_inferred, file_suffix, quality_text, debug_df, values_dict = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
-    "                                                                            include_test_users=include_test_users)"
+    "                                                                            include_test_users=include_test_users)\n",
+    "\n",
+    "if (include_test_users == True):\n",
+    "    users = \"testers and participants\"\n",
+    "else:\n",
+    "    users = \"participants\""
    ]
   },
   {
